# Stanford-CS149

asst3/render/: CMakeLists.txt  Makefile  Makefile copy  benchmark.cu  checker.py  cudaRenderer.cu  main.cpp  output_0000.ppm  render
asst3/saxpy/: cudaSaxpy  saxpy.cu
asst3/scan/: checker.py  cudaScan  main.cpp  scan.cu
